add products view, refactor badge logic to reusable component, fix minor spacing margins on multiple views

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,3 +21,9 @@ we still enforce color-scheme: dark, despite the user preference */
 /*#app {*/
 /*  max-width: 1280px;*/
 /*}*/
+
+@layer base {
+  :root {
+    --color-primary: #1e40af; /* #1e40af */
+  }
+}
